# sea-of-stars-autosplitter

./: .gitignore  Cargo.toml  LICENSE  README.md  activities.txt  build.rs  enemies_log.txt  key_items.txt  late_game_encounters.txt  late_game_enemies.txt  late_game_enemies_log.txt  levels.txt  required.txt  run_log.txt  splits.md  splits2.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: data.rs  game.rs  lib.rs  memory.rs  progress.rs  splits.rs
